cmake_minimum_required(VERSION 3.16)
project(Plugins LANGUAGES CXX)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../SQLiteStudio3/cmake")

include(plugins)

option(WITH_PORTABLE "Create portable bundle" $<OR:$<PLATFORM_ID:Windows>,$<PLATFORM_ID:Darwin>>)

add_subdirectory(CellRendererImage)
add_subdirectory(CsvExport)
add_subdirectory(CsvImport)
add_subdirectory(ErdEditor)
add_subdirectory(FusionDarkStyle)
add_subdirectory(HtmlExport)
add_subdirectory(PdfExport)
add_subdirectory(SqlExport)
add_subdirectory(SqlFormatterSimple)
add_subdirectory(TclSyntaxHighlighter)
add_subdirectory(XmlExport)
add_subdirectory(JsonExport)
add_subdirectory(RegExpImport)
add_subdirectory(Printing)
add_subdirectory(SqlEnterpriseFormatter)
add_subdirectory(ScriptingTcl)
add_subdirectory(ScriptingPython)
add_subdirectory(DbAndroid)
add_subdirectory(DbSqliteWx)
add_subdirectory(MultiEditorImage)
add_subdirectory(MultiEditorJson)
add_subdirectory(PythonSyntaxHighlighter)
