cmake_minimum_required(VERSION 3.16)
project(Plugins LANGUAGES C CXX)

find_package(Python COMPONENTS Development)
find_package(Qt6 COMPONENTS Pdf PrintSupport)
find_package(TCL)

if(WIN32 OR APPLE)
    set(WITH_PORTABLE_DEFAULT ON)
endif()
if(Qt6Pdf_FOUND AND Qt6PrintSupport_FOUND)
    set(WITH_Printing_DEFAULT ON)
endif()

option(WITH_ALL_PLUGINS "Build all plugins forcefully" OFF)

option(WITH_CellRendererImage "Build CellRendererImage plugin" ON)
option(WITH_CsvExport "Build CsvExport plugin" ON)
option(WITH_CsvImport "Build CsvImport plugin" ON)
option(WITH_ErdEditor "Build ErdEditor plugin" ON)
option(WITH_FusionDarkStyle "Build FusionDarkStyle plugin" ON)
option(WITH_HtmlExport "Build HtmlExport plugin" ON)
option(WITH_PdfExport "Build PdfExport plugin" ${Qt6Pdf_FOUND})
option(WITH_SqlExport "Build SqlExport plugin" ON)
option(WITH_SqlFormatterSimple "Build SqlFormatterSimple plugin" ON)
option(WITH_TclSyntaxHighlighter "Build TclSyntaxHighlighter plugin" ON)
option(WITH_XmlExport "Build XmlExport plugin" ON)
option(WITH_JsonExport "Build JsonExport plugin" ON)
option(WITH_RegExpImport "Build RegExpImport plugin" ON)
option(WITH_Printing "Build Printing plugin" ${WITH_Printing_DEFAULT})
option(WITH_SqlEnterpriseFormatter "Build SqlEnterpriseFormatter plugin" ON)
option(WITH_ScriptingTcl "Build ScriptingTcl plugin" ${TCL_FOUND})
option(WITH_ScriptingPython "Build ScriptingPython plugin" ${Python_Development_FOUND})
option(WITH_DbAndroid "Build DbAndroid plugin" ON)
option(WITH_DbSqliteWx "Build DbSqliteWx plugin" ON)
option(WITH_MultiEditorImage "Build MultiEditorImage plugin" ON)
option(WITH_MultiEditorJson "Build MultiEditorJson plugin" ON)
option(WITH_PythonSyntaxHighlighter "Build PythonSyntaxHighlighter plugin" ON)

option(WITH_PORTABLE "Install plugins within portable bundle" ${WITH_PORTABLE_DEFAULT})

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../SQLiteStudio3/cmake")

include(plugins)

if(WITH_CellRendererImage OR WITH_ALL_PLUGINS)
    set(WITH_CellRendererImage ON)
    add_subdirectory(CellRendererImage)
endif()
if(WITH_CsvExport OR WITH_ALL_PLUGINS)
    set(WITH_CsvExport ON)
    add_subdirectory(CsvExport)
endif()
if(WITH_CsvImport OR WITH_ALL_PLUGINS)
    set(WITH_CsvImport ON)
    add_subdirectory(CsvImport)
endif()
if(WITH_ErdEditor OR WITH_ALL_PLUGINS)
    set(WITH_ErdEditor ON)
    add_subdirectory(ErdEditor)
endif()
if(WITH_FusionDarkStyle OR WITH_ALL_PLUGINS)
    set(WITH_FusionDarkStyle ON)
    add_subdirectory(FusionDarkStyle)
endif()
if(WITH_HtmlExport OR WITH_ALL_PLUGINS)
    set(WITH_HtmlExport ON)
    add_subdirectory(HtmlExport)
endif()
if(WITH_PdfExport OR WITH_ALL_PLUGINS)
    set(WITH_PdfExport ON)
    add_subdirectory(PdfExport)
endif()
if(WITH_SqlExport OR WITH_ALL_PLUGINS)
    set(WITH_SqlExport ON)
    add_subdirectory(SqlExport)
endif()
if(WITH_SqlFormatterSimple OR WITH_ALL_PLUGINS)
    set(WITH_SqlFormatterSimple ON)
    add_subdirectory(SqlFormatterSimple)
endif()
if(WITH_TclSyntaxHighlighter OR WITH_ALL_PLUGINS)
    set(WITH_TclSyntaxHighlighter ON)
    add_subdirectory(TclSyntaxHighlighter)
endif()
if(WITH_XmlExport OR WITH_ALL_PLUGINS)
    set(WITH_XmlExport ON)
    add_subdirectory(XmlExport)
endif()
if(WITH_JsonExport OR WITH_ALL_PLUGINS)
    set(WITH_JsonExport ON)
    add_subdirectory(JsonExport)
endif()
if(WITH_RegExpImport OR WITH_ALL_PLUGINS)
    set(WITH_RegExpImport ON)
    add_subdirectory(RegExpImport)
endif()
if(WITH_Printing OR WITH_ALL_PLUGINS)
    set(WITH_Printing ON)
    add_subdirectory(Printing)
endif()
if(WITH_SqlEnterpriseFormatter OR WITH_ALL_PLUGINS)
    set(WITH_SqlEnterpriseFormatter ON)
    add_subdirectory(SqlEnterpriseFormatter)
endif()
if(WITH_ScriptingTcl OR WITH_ALL_PLUGINS)
    set(WITH_ScriptingTcl ON)
    add_subdirectory(ScriptingTcl)
endif()
if(WITH_ScriptingPython OR WITH_ALL_PLUGINS)
    set(WITH_ScriptingPython ON)
    add_subdirectory(ScriptingPython)
endif()
if(WITH_DbAndroid OR WITH_ALL_PLUGINS)
    set(WITH_DbAndroid ON)
    add_subdirectory(DbAndroid)
endif()
if(WITH_DbSqliteWx OR WITH_ALL_PLUGINS)
    set(WITH_DbSqliteWx ON)
    add_subdirectory(DbSqliteWx)
endif()
if(WITH_MultiEditorImage OR WITH_ALL_PLUGINS)
    set(WITH_MultiEditorImage ON)
    add_subdirectory(MultiEditorImage)
endif()
if(WITH_MultiEditorJson OR WITH_ALL_PLUGINS)
    set(WITH_MultiEditorJson ON)
    add_subdirectory(MultiEditorJson)
endif()
if(WITH_PythonSyntaxHighlighter OR WITH_ALL_PLUGINS)
    set(WITH_PythonSyntaxHighlighter ON)
    add_subdirectory(PythonSyntaxHighlighter)
endif()

# show summary
message(STATUS "---------------------------------------")
message(STATUS "SQLiteStudio plugins:")
message(STATUS "  CellRendererImage:       ${WITH_CellRendererImage}")
message(STATUS "  CsvExport:               ${WITH_CsvExport}")
message(STATUS "  CsvImport:               ${WITH_CsvImport}")
message(STATUS "  ErdEditor:               ${WITH_ErdEditor}")
message(STATUS "  FusionDarkStyle:         ${WITH_FusionDarkStyle}")
message(STATUS "  HtmlExport:              ${WITH_HtmlExport}")
message(STATUS "  PdfExport:               ${WITH_PdfExport}")
message(STATUS "  SqlExport:               ${WITH_SqlExport}")
message(STATUS "  SqlFormatterSimple:      ${WITH_SqlFormatterSimple}")
message(STATUS "  TclSyntaxHighlighter:    ${WITH_TclSyntaxHighlighter}")
message(STATUS "  XmlExport:               ${WITH_XmlExport}")
message(STATUS "  JsonExport:              ${WITH_JsonExport}")
message(STATUS "  RegExpImport:            ${WITH_RegExpImport}")
message(STATUS "  Printing:                ${WITH_Printing}")
message(STATUS "  SqlEnterpriseFormatter:  ${WITH_SqlEnterpriseFormatter}")
message(STATUS "  ScriptingTcl:            ${WITH_ScriptingTcl}")
message(STATUS "  ScriptingPython:         ${WITH_ScriptingPython}")
message(STATUS "  DbAndroid:               ${WITH_DbAndroid}")
message(STATUS "  DbSqliteWx:              ${WITH_DbSqliteWx}")
message(STATUS "  MultiEditorImage:        ${WITH_MultiEditorImage}")
message(STATUS "  MultiEditorJson:         ${WITH_MultiEditorJson}")
message(STATUS "  PythonSyntaxHighlighter: ${WITH_PythonSyntaxHighlighter}")
message(STATUS "---------------------------------------")
